--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     -->
     <title>Allyson and Chris's Wedding</title>
   </head>
-  <body>
+  <body class="bg-faded">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
