--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="outer-container">
     <div class="container">
       <div class="header clearfix">
-        <h1>Allyson and Chris</h1>
+        <h1><strong>Allyson and Chris</strong></h1>
         <h4>June 3rd, 2018</h4>
       </div>
 
@@ -32,20 +32,23 @@
         <img alt="Allyson and Chris" src="./assets/img/AllysonChris_0129.jpg">
       </div>
       <hr>
-      <div class="row justify-content-between">
+      <div class="justify-content-between">
         <div class="card text-center border-0">
-          <div class="row card-body">
-            <div class="col-4 offset-1">
-              <p>Our wedding will be held at the Open Air Chapel and the reception will be held at the Green Farm Barn - both
-                part of the Chatfield Farms location of the Denver Botanic Gardens.</p>
-              <p>We chose this location for the beatiful backdrop of the Front Range of the Rocky Mountains and the proximity
-                of downtown Denver.</p>
-                <p>We love our new home and feel that this location conveys part of what we love about living
-                out here. We hope that you will join us and share this wonderful event with us.</p>
-            </div>
-            <div class="col-3 offset-0">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.3874121644967!2d-105.10165128434765!3d39.55087131576415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b7c30eab3ea75%3A0x8db8f95b60bbb606!2sDenver+Botanic+Gardens+Chatfield+Farms!5e0!3m2!1sen!2sus!4v1509926265879"
-                width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <div class="card-body">
+            <h3 class="card-title"><strong>Location</strong></h3>
+            <div class="row">
+              <div class="col-md-4 offset-1">
+                <p>Our wedding will be held at the Open Air Chapel and the reception will be held at the Green Farm Barn - both
+                  part of the Chatfield Farms location of the Denver Botanic Gardens.</p>
+                <p>We chose this location for the beatiful backdrop of the Front Range of the Rocky Mountains and the proximity
+                  of downtown Denver.</p>
+                <p>We love our new home and feel that this location conveys part of what we love about living out here. We hope
+                  that you will join us and share this wonderful event with us.</p>
+              </div>
+              <div class="col-md-3 offset-0">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.3874121644967!2d-105.10165128434765!3d39.55087131576415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b7c30eab3ea75%3A0x8db8f95b60bbb606!2sDenver+Botanic+Gardens+Chatfield+Farms!5e0!3m2!1sen!2sus!4v1509926265879"
+                  width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              </div>
             </div>
           </div>
         </div>
