--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="card">
         <img alt="Allyson and Chris" src="./assets/img/AllysonChris_0129.jpg">
       </div>
+      <p class="photo-credit"><a href="plumprettyphotography.com">Plum Pretty Photography</a> (Thanks Melissa Dell Vecchio!)</p>
       <hr>
       <div class="justify-content-between">
         <div class="card text-center border-0">
@@ -40,7 +41,7 @@
               <div class="col-md-4 offset-1">
                 <p>Our wedding will be held at the Open Air Chapel and the reception will be held at the Green Farm Barn - both
                   part of the Chatfield Farms location of the Denver Botanic Gardens.</p>
-                <p>We chose this location for the beatiful backdrop of the Front Range of the Rocky Mountains and the proximity
+                <p>We chose this location for the beautiful backdrop of the Front Range of the Rocky Mountains and the proximity
                   of downtown Denver.</p>
                 <p>We love our new home and feel that this location conveys part of what we love about living out here. We hope
                   that you will join us and share this wonderful event with us.</p>
