Fix photo credit link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="card">
         <img alt="Allyson and Chris" src="./assets/img/AllysonChris_0129.jpg">
       </div>
-      <p class="photo-credit"><a href="plumprettyphotography.com">Plum Pretty Photography</a> (Thanks Melissa Dell Vecchio!)</p>
+      <p class="photo-credit"><a href="http://plumprettyphotography.com" target="_blank">Plum Pretty Photography</a> (Thanks Melissa Dell Vecchio!)</p>
       <hr>
       <div class="justify-content-between">
         <div class="card text-center border-0">
