Fix wording of location description

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 class="card-title"><strong>Location</strong></h3>
             <div class="row">
               <div class="col-lg-4 offset-1">
-                <p>Our wedding will be held at the Open Air Chapel and the reception will be held at the Green Farm Barn - both
+                <p>Our wedding ceremony will be held at the Open Air Chapel and the reception will be held at the Green Farm Barn - both
                   part of the Chatfield Farms location of the Denver Botanic Gardens.</p>
                 <p>We chose this location for the beautiful backdrop of the Front Range of the Rocky Mountains and the proximity
                   of downtown Denver.</p>
