Justify location text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <strong>Location</strong>
             </h3>
             <div class="row justify-content-around">
-              <div class="col-lg-5">
+              <div class="col-lg-5 text-justify">
                 <p>Our wedding ceremony will be held at the Open Air Chapel and the reception will be held at the Green Farm
                   Barn - both part of the Chatfield Farms location of the Denver Botanic Gardens.</p>
                 <p>We chose this location for the beautiful backdrop of the Front Range of the Rocky Mountains and the proximity
