Change title to image

--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
   <div class="outer-container">
     <div class="container">
       <div class="header clearfix">
-        <h1>
-          <strong>Allyson and Chris</strong>
-        </h1>
-        <h4>June 3rd, 2018</h4>
+        <img alt="banner" src="./assets/img/banner.jpg" class="img-fluid banner-image">
       </div>
 
       <div class="card">
-        <img alt="Allyson and Chris" src="./assets/img/AllysonChris_0129.jpg">
+        <img alt="Allyson and Chris" src="./assets/img/AllysonChris_0129.jpg" class="main-photo">
       </div>
       <p class="photo-credit">
         <a href="http://plumprettyphotography.com" target="_blank">Plum Pretty Photography</a> (Thanks Melissa Del Vecchio!)</p>
