Fix links and formatting.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           </div>
         </div>
       </div>
+      <hr>
       <div class="justify-content-between">
         <div class="card text-center border-0">
           <div class="card-body">
@@ -66,34 +67,38 @@
             </h3>
             <div>
               <div class="text-justify">
-                <p>We recommend <a href="https://www.southwest.com/flight/shortcut/low-fare-search.html?clk=SITESEARCH" target="_blank">Southwest Airlines</a> for flights due to their free checked bags and no change / cancellation fees. If you're looking for flights "on the cheap", another great site to check out is <a href="https://skiplagged.com" target="_blank">skiplagged.com</a></p>
-				<p>Once you arrive in Denver, there are many public transportation options. You can take the light rail from the airport to just about anywhere you want to go in and around Denver. The train picks you up just outside of the baggage claim area. You can <a href="https://www.rtd-denver.com/app/plan/trip" target="_blank">plan your route</a> on the RTD site, <a href="http://www.rtd-denver.com/routemaps/2319/101_SW_D.pdf" target="_blank">view the route map</a>, or browse their site to learn your light rail options before arriving. The closest station to the venue is Littleton / Mineral Station (#33716), and this option would probably require using a combination of the train and a <a href="" target="_blank">lyft</a> / <a href="" target="_blank">uber</a> ride from the station to the hotel / venue. If you're considering staying in downtown Denver, your best bet is to take the light rail to union station. From there, you're within walking distance of tons of great restaurants, bars, and entertainment.</p>
-                <p>As for accommodations, we have some suggestions for you, depending on what you're looking for. If you're concerned about proximity to the venue, a great option is the <a href="http://www.marriott.com/hotels/travel/dentp-towneplace-suites-denver-southwest-littleton/" target="_blank">Towne Place and Suites Marriott</a> which is only 2.6 miles up the road from the wedding venue. If you're a bit more adventurous, <a href="https://www.vrbo.com/results?swLat=39.51300189851595&swLong=-105.09891252050784&neLat=39.637642081438045&neLong=-104.97256974707034&q=littleton&zoom=12&page=1&region=1&from-date=2018-06-01&to-date=2018-06-04&searchTermContext=013004bf-fc90-41bb-b5c1-2e74f87a19b5&sleeps=2-plus" target="_blank">VRBO</a> or <a href="https://www.airbnb.com/s/Littleton--CO--United-States/homes?refinement_path=%2Ffor_you&allow_override%5B%5D=&checkin=2018-06-01&checkout=2018-06-04&ne_lat=39.61575365023268&ne_lng=-104.97197138506931&sw_lat=39.51513138407771&sw_lng=-105.10552393633884&zoom=12&search_by_map=true&s_tag=NWf1ylSs" target="_blank">AirBnB</a> have some great houses available for rent. If you're not worried about proximity to the venue but prefer staying in a hotel, downtown Littleton and downtown Denver are both great places to stay!</p>
+                <p>We recommend
+                  <a href="https://www.southwest.com/flight/shortcut/low-fare-search.html?clk=SITESEARCH" target="_blank">Southwest Airlines</a> for flights due to their free checked bags and no change / cancellation fees. If
+                  you're looking for flights "on the cheap", another great site to check out is
+                  <a href="https://skiplagged.com" target="_blank">skiplagged.com</a>
+                </p>
+                <p>Once you arrive in Denver, there are many public transportation options. You can take the light rail from
+                  the airport to just about anywhere you want to go in and around Denver. The train picks you up just outside
+                  of the baggage claim area. You can
+                  <a href="https://www.rtd-denver.com/app/plan/trip" target="_blank">plan your route</a> on the RTD site,
+                  <a href="http://www.rtd-denver.com/routemaps/2319/101_SW_D.pdf" target="_blank">view the route map</a>, or browse their site to learn your light rail options before arriving. The closest
+                  station to the venue is Littleton / Mineral Station (#33716), and this option would probably require using
+                  a combination of the train and a
+                  <a href="https://www.lyft.com/invite/VANLAWWEDDING" target="_blank">Lyft</a>
+                  from the station to the hotel / venue. If you're considering staying in downtown Denver, your best bet is to take the light
+                  rail to Union Station. From there, you're within walking distance of tons of great restaurants, bars, and
+                  entertainment.
+                </p>
+                <p>As for accommodations, we have some suggestions for you, depending on what you're looking for. If you're
+                  concerned about proximity to the venue, a great option is the
+                  <a href="http://www.marriott.com/hotels/travel/dentp-towneplace-suites-denver-southwest-littleton/" target="_blank">Towne Place and Suites Marriott</a> which is only 2.6 miles up the road from the wedding venue. If you're
+                  a bit more adventurous,
+                  <a href="https://www.vrbo.com/results?swLat=39.51300189851595&swLong=-105.09891252050784&neLat=39.637642081438045&neLong=-104.97256974707034&q=littleton&zoom=12&page=1&region=1&from-date=2018-06-01&to-date=2018-06-04&searchTermContext=013004bf-fc90-41bb-b5c1-2e74f87a19b5&sleeps=2-plus"
+                    target="_blank">VRBO</a> or
+                  <a href="https://www.airbnb.com/s/Littleton--CO--United-States/homes?refinement_path=%2Ffor_you&allow_override%5B%5D=&checkin=2018-06-01&checkout=2018-06-04&ne_lat=39.61575365023268&ne_lng=-104.97197138506931&sw_lat=39.51513138407771&sw_lng=-105.10552393633884&zoom=12&search_by_map=true&s_tag=NWf1ylSs"
+                    target="_blank">AirBnB</a> have some great houses available for rent. If you're not worried about proximity to the venue
+                  but prefer staying in a hotel, downtown Littleton and downtown Denver are both great places to stay!</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!--
-      <div class="row marketing justify-content-center">
-        <h3 class="align-center">Save the Date!</h3>
-      </div>
-      <div class="row marketing justify-content-between">
-        <div class="col">
-          <h4>June 3rd, 2018</h4>
-        </div>
-        <div class="col">
-          <h4>The Green Farm Barn and Open Air Chapel at Chatfield Botanic Gardens</h4>
-        </div>
-      </div>
-      <div class="row justify-content-around">
-        <div class="offset-md-0">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.3874121644967!2d-105.10165128434765!3d39.55087131576415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b7c30eab3ea75%3A0x8db8f95b60bbb606!2sDenver+Botanic+Gardens+Chatfield+Farms!5e0!3m2!1sen!2sus!4v1509926265879" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-      </div>
-    -->
     </div>
-    <!-- /container -->
   </div>
 
   <!-- Bootstrap core JavaScript
