Add registry info to page.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
           </div>
         </div>
       </div>
+      <hr>
+      <div class="justify-content-between">
+        <div class="card text-center border-0">
+          <div class="card-body">
+            <h3 class="card-title">
+              <strong>Registry</strong>
+            </h3>
+            <div>
+              <div class="text-justify">
+                <p>We're currently registered at <a href="https://www.potterybarn.com/registry/rl8vdqrm6c/registry-list.html" target="_blank">Pottery Barn</a>, <a href="https://www.crateandbarrel.com/gift-registry/allyson-mccarthy-and-christopher-van-law/r5785621" target="_blank">Crate &amp Barrel</a>, and <a href="https://www.zola.com/registry/vanlaw" target="_blank">Zola</a>. Any and all gifts will be thoroughly appreciated and enjoyed so don't feel obligated to stick to these lists!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
