Add anchors to sections.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <div class="card text-center border-0">
           <div class="card-body">
             <h3 class="card-title">
-              <strong>Location</strong>
+              <a name="location">
+                <strong>Location</strong>
+              </a>
             </h3>
             <div class="row justify-content-around">
               <div class="col-lg-5 text-justify">
@@ -63,7 +65,9 @@
         <div class="card text-center border-0">
           <div class="card-body">
             <h3 class="card-title">
-              <strong>Travel & Accomodations</strong>
+              <a name="travel">
+                <strong>Travel & Accomodations</strong>
+              </a>
             </h3>
             <div>
               <div class="text-justify">
@@ -103,11 +107,17 @@
         <div class="card text-center border-0">
           <div class="card-body">
             <h3 class="card-title">
-              <strong>Registry</strong>
+              <a name="registry">
+                <strong>Registry</strong>
+              </a>
             </h3>
             <div>
               <div class="text-justify">
-                <p>We're currently registered at <a href="https://www.potterybarn.com/registry/rl8vdqrm6c/registry-list.html" target="_blank">Pottery Barn</a>, <a href="https://www.crateandbarrel.com/gift-registry/allyson-mccarthy-and-christopher-van-law/r5785621" target="_blank">Crate &amp Barrel</a>, and <a href="https://www.zola.com/registry/vanlaw" target="_blank">Zola</a>. Any and all gifts will be thoroughly appreciated and enjoyed so don't feel obligated to stick to these lists!
+                <p>We're currently registered at
+                  <a href="https://www.potterybarn.com/registry/rl8vdqrm6c/registry-list.html" target="_blank">Pottery Barn</a>,
+                  <a href="https://www.crateandbarrel.com/gift-registry/allyson-mccarthy-and-christopher-van-law/r5785621" target="_blank">Crate &amp Barrel</a>, and
+                  <a href="https://www.zola.com/registry/vanlaw" target="_blank">Zola</a>. Any and all gifts will be thoroughly appreciated and enjoyed so don't feel obligated to stick
+                  to these lists!
                 </p>
               </div>
             </div>
